k8s/network/gateway-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: faas-gateway-policy
  namespace: openfaas
spec:
  podSelector:
    matchLabels:
      app: gateway
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openfaas
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
