k8s/network/group1-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: group1-network-policy
  namespace: group1
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openfaas
        - namespaceSelector:
            matchLabels:
              scope: group1
        - namespaceSelector:
            matchLabels:
              scope: user1
        - namespaceSelector:
            matchLabels:
              scope: user3
        - podSelector:
            matchLabels:
              app: ow-agent
