k8s/network/group2-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: group2-network-policy
  namespace: group2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openfaas
        - namespaceSelector:
            matchLabels:
              scope: group2
        - namespaceSelector:
            matchLabels:
              scope: user2
        - namespaceSelector:
            matchLabels:
              scope: user3
        - podSelector:
            matchLabels:
              app: ow-agent
