k8s/network/proxy-group1-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: proxy-group1-network-policy
  namespace: proxy-group1
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openfaas
        - namespaceSelector:
            matchLabels:
              scope: group1
        - namespaceSelector:
            matchLabels:
              scope: user1
        - namespaceSelector:
            matchLabels:
              scope: user3
