k8s/network/proxy-group2-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: proxy-group2-network-policy
  namespace: proxy-group2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openfaas
        - namespaceSelector:
            matchLabels:
              scope: group2
        - namespaceSelector:
            matchLabels:
              scope: user2
        - namespaceSelector:
            matchLabels:
              scope: user3
