k8s/network/proxy-user2-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: proxy-user2-network-policy
  namespace: proxy-user2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openfaas
        - namespaceSelector:
            matchLabels:
              scope: user2
