k8s/network/user1-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user1-network-policy
  namespace: user1
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openfaas
        - namespaceSelector:
            matchLabels:
              scope: user1
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
        - namespaceSelector:
            matchLabels:
              app: nginx
