k8s/network/user3-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user3-network-policy
  namespace: user3
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openfaas
        - namespaceSelector:
            matchLabels:
              scope: user3
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
        - namespaceSelector:
            matchLabels:
              app: nginx
