k8s/network/world-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: world-network-policy
  namespace: openfaas-fn
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
        - podSelector:
            matchLabels:
              app: ow-agent
